add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-      <title><style>
+      <title>The End</title>
+      <style>
         body {
             background: rgb(125, 198, 205);
             color: rgb(45, 45, 45);
@@ -63,7 +64,7 @@
         h2, h3 {
             margin: 0px;
         }
-     </style></title>
+     </style>
     </head>
     
     <body>
