add index.html file

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
      </nav>
       <main>
           <!--side bar section-->
-        <div class="sidebar"> <img class="sidebar-img" scr="https://images.app.goo.gl/XGSp5G4SJimmehMG7"
+        <div class="sidebar"> <img class="sidebar-img" scr="https://images.app.goo.gl/XGSp5G4SJimmehMG7"> </div>
           <h2> Carlance </h2>
           <p> Student at Mlk high </p>
-          </div>
+          
           <!--content section-->
         <div class="content"> 
             <h2> </h2>
@@ -92,9 +92,9 @@
              <div id="interests">
                  <h3>Interests</h3>
                  <ul>
-                     <li>thing 1
-                         <li> thing 2
-                             <li> thing 3</li>
+                     <li>Gaming
+                         <li> Money
+                             <li> Kiara</li>
                          </li>
                      </li>
                  </ul>
