--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>The End</title>
       <style>
         body {
-            background: rgb(125, 198, 205);
+            background: rgb(152, 0, 0);
             color: rgb(45, 45, 45);
             padding: 10px;
             font-family: arial;
@@ -16,7 +16,7 @@
      
         /* navigation menu */
         nav {
-            background: rgb(255, 0, 60);
+            background: rgb(130, 17, 17);
            margin: 0 auto;
            margin-bottom:20px;
             display: flex;
@@ -43,7 +43,7 @@
      
         /* main container area beneath menu */
         main {
-            background: rgb(245, 238, 219);
+            background: rgb(9, 14, 75);
             display: flex;
         }
         .sidebar {
@@ -92,9 +92,9 @@
              <div id="interests">
                  <h3>Interests</h3>
                  <ul>
-                     <li>Gaming
+                     <li>Games
                          <li> Money
-                             <li> Kiara</li>
+                             <li> Love</li>
                          </li>
                      </li>
                  </ul>
