--- a/index.html
+++ b/index.html
@@ -86,21 +86,15 @@
           
           <!--content section-->
         <div class="content"> 
-            <h2> </h2>
-            <p> </p> 
              <!-- Interests section -->
              <div id="interests">
                  <h3>Interests</h3>
                  <ul>
-                     <li>Games
-                         <li> Money
-                             <li> Love</li>
-                         </li>
-                     </li>
+                     <li> Games </li>
+                         <li> Money </li>
+                             <li> Love </li>
                  </ul>
              </div>
-        </div>
-          <div>
         </div>
      </main>
        
