--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -73,7 +73,7 @@
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
-			function update() {changeBoxText()
+			function update() {
 				// code to increase postition x by 10 
 				positionX = positionX + speed;
 				moveBoxTo(positionX);
