--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -97,10 +97,10 @@
 				changeBoxText(points)
 				speed = speed + 3
 				if (speed = -speed) {
-					speed + -3
+					speed += -3
 				}
             else if (speed = +speed) {
-				speed + 3
+				speed += 3
 			}
 			};
 		})();
